CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
CMAKE_POLICY(VERSION 2.6)
#SET (CMAKE_BUILD_TYPE Debug)
PROJECT(WebkitSupplemental)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/Modules)
INCLUDE( ${CMAKE_SOURCE_DIR}/CMake/Modules/TargetDistclean.cmake)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

FIND_PACKAGE(PkgConfig)

#FIND_PACKAGE(Gettext)

SET(PKG_DATADIR ${CMAKE_INSTALL_PREFIX}/share)
SET(LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
SET(PKG_BINDIR ${CMAKE_INSTALL_PREFIX}/bin)
SET(PKG_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
SET(PKG_INCLUDEDIR ${CMAKE_INSTALL_PREFIX}/include)
SET(PKG_VERSION 0.5.27.1)

ADD_SUBDIRECTORY(misc)
ADD_SUBDIRECTORY(widgets)
ADD_SUBDIRECTORY(qtwebkitplugin)
# i.e. if Qt5 qbsplugin not needed
#!contains(QT_VERSION, "^5.*") {
# SUBDIRS += qbsplugin
#}

IF (ENABLE_DOC)
    ADD_SUBDIRECTORY(doc)
ENDIF()

########### Add uninstall target ###############
CONFIGURE_FILE(
  "${CMAKE_CURRENT_SOURCE_DIR}/CMake/cmake_uninstall.cmake.in"
  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
  IMMEDIATE @ONLY)
ADD_CUSTOM_TARGET(uninstall
  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake") 
