FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)
#FIND_PACKAGE(Qt4 4.7 COMPONENTS QtCore QtDbus REQUIRED)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH 0)

PKG_CHECK_MODULES(DBUS dbus-1 REQUIRED)

#INCLUDE(${QT5_USE_FILE})
ADD_DEFINITIONS(${Qt5Core_DEFINITIONS})
ADD_DEFINITIONS(${Qt5DBus_DEFINITIONS})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/common
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    ${DBUS_INCLUDE_DIRS}
    )

SET (LIBRARY WebKitWidgets)

SET(LIBRARY_SRCS
        phrasePickerWidget.cpp
    )

SET(LIBRARY_HEADERS
       phrasePickerWidget.h
    )

QT5_WRAP_CPP(LIBRARY_MOC_HEADERS ${LIBRARY_HEADERS})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")

ADD_LIBRARY(${LIBRARY} STATIC ${LIBRARY_SRCS} ${LIBRARY_HEADERS} ${LIBRARY_MOC_HEADERS})

SET_TARGET_PROPERTIES( ${LIBRARY} PROPERTIES
     SOVERSION 0
     VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
   )

TARGET_LINK_LIBRARIES(${LIBRARY}
    ${ZLIB_LIBRARIES}
    ${Qt5Core_LIBRARIES}
    ${Qt5Widgets_LIBRARIES}
    )

INSTALL(TARGETS ${LIBRARY} DESTINATION ${PKG_LIBDIR})
INSTALL(FILES ${LIBRARY_HEADERS} DESTINATION ${PKG_INCLUDEDIR}/WebKitSupplemental)
